--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.40.0",
     "@google/generative-ai": "^0.24.1",
     "@vapi-ai/web": "^2.5.2",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.31.0",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "openai": "^6.17.0",
